Fix keyboard shortcuts settings display (#11467)
- Add border to keyboard shortcuts to make them more distinct from each other
- Move scrollbar to table so the header becomes sticky

# Important Notes
None

--- a/app/gui/src/dashboard/tailwind.css
+++ b/app/gui/src/dashboard/tailwind.css
@@ -97,8 +97,6 @@
   --spinner-fast-transition-duration: 1s;
   --spinner-medium-transition-duration: 5s;
   --spinner-slow-transition-duration: 90s;
-  --modifiers-gap: 0.1875rem;
-  --modifiers-macos-gap: 0.125rem;
   --cell-padding-x: 0.5rem;
   --plus-icon-size: 1.125rem;
   /* The horizontal gap between adjacent context menus. */
@@ -322,12 +320,6 @@
 
   --members-name-column-width: 12rem;
   --members-email-column-width: 12rem;
-  --keyboard-shortcuts-icon-column-width: 2rem;
-  --keyboard-shortcuts-name-column-width: 9rem;
-  --keyboard-shortcuts-description-column-width: 16rem;
-  --icon-column-padding-right: 0.375rem;
-  /* The horizontal gap between each icon for modifying the shortcuts for a particular action. */
-  --keyboard-shortcuts-button-gap: 0.25rem;
 
   /***********************\
   |* Authentication flow *|
